@@ -392,6 +392,7 @@ a.search_refine:hover		{border:1px solid #2d5d7b; background:linear-gradient(#50
 .search_query span			{font-size:14px; display:block; padding-top:5px; color:#999; line-height:1.2em;}
 .search_query span img		{padding:2px 7px 0 0; height:12px; width:12px; -webkit-filter:brightness(80%); filter:brightness(80%);}
 .search_query span.filter_icon	{display:inline-block; padding:2px 5px 0 0; font-size:10px;}
+.search_query .sector		{font-size:1.1em; line-height:1.3em; color:#FFF; padding:0;}
 
 .search_help				{width:100%; text-align:right;}
 .search_help span			{display:inline-block; margin-right:20px; background-color:#ffd982c4; padding:5px; border-radius:4px 4px 0 0; font-size:14px; font-weight:bold;}
