@@ -1015,7 +1015,7 @@ Humanitarian Activity
 Humanitarian Transaction
 
 #search_commitment_txt
-Total Commitment Min / Max
+Total Commitment
 
 #search_commitment_min_txt
 Commitment Threshold Min
