@@ -27,10 +27,10 @@ span.withdrawn	{font-size:12px; font-style:italic; font-weight:normal; text-tran
 
 /*	HEADERS	*/
 .header,
-.header_doc		{font-size:14px; color:#ccc; text-transform:uppercase; display:block; border-bottom:1px solid #aaa; padding-bottom:10px; margin-bottom:20px; position:relative;}
+.header_doc		{font-size:13px; color:#ccc; text-transform:uppercase; display:block; border-bottom:1px solid #aaa; padding-bottom:10px; margin-bottom:20px; position:relative;}
 .header_doc		{border:0; margin:0;}
 .header_section	{font-size:12px; color:#FFF; background-color:rgba(17,46,105,0.9); padding:10px 40px; margin:0 0 20px -50px; width:980px; text-transform:uppercase; box-sizing:border-box;}
-.bright			{background-color:rgba(38,67,128,0.9); margin-bottom:0;}
+.bright			{background-color:rgba(38,67,128,0.9);}
 .brighter		{background-color:transparent; width:880px; padding:0; font-size:11px; border-bottom:2px solid #47506b; margin:auto; margin:5px 0 20px 0; line-height:20px;}
 .brighter span	{background-color:#47506b; display:inline; padding:5px 10px;}
 .sticky			{position:sticky; top:-1px; z-index:2;}
@@ -43,13 +43,13 @@ span.block		{display:block;}
 /*	WRAPPERS	*/
 .wrap_title					{padding-bottom:40px;}
 .wrap_reporting_org			{font-size:18px; line-height:1.35em; color:#ccc;}
-.wrap_title span			{display:block; font-size:42px; line-height:1em; padding-top:10px;}
+.wrap_title span			{display:block; font-size:42px; line-height:1.1em;}
 .wrap_title span:nth-of-type(2)	{font-style:italic; font-size:30px; line-height:1em;}
 .wrap_reporting_org div		{display:inline-block; vertical-align:top; padding-right:10px;}
 .wrap_iati_identifier		{background-color:rgba(0,14,32,0.7); width:960px; font-size:18px; line-height:1.5em; padding:20px 40px; color:#FFAB5E; margin:0 auto; margin-left:-40px; margin-top:25px;}
 .wrap_iati_identifier.org_id	{margin-top:10px;}
 .wrap_reporting_org .text,
-.wrap_iati_identifier .text		{color:#ccc; text-transform:uppercase; font-size:14px;}
+.wrap_iati_identifier .text		{color:#ccc; text-transform:uppercase; font-size:13px;}
 .wrap_iati_identifier .text a	{font-size:18px; padding-left:5px;}
 .wrap_name_org				{font-size:18px; padding-bottom:10px; color:#fff;}
 .wrap_description			{margin:40px auto;}
@@ -155,7 +155,7 @@ span.doc_rec	{background-color:rgba(22,24,37,0.6);}
 
 /*	CONTACT INFO	*/
 .wrap_contact_info					{width:980px; margin:0 0 20px -50px; padding:20px 40px 0 40px; font-size:16px; line-height:1.5em; background-color:rgba(17,46,105,0.9);}
-.wrap_contact_info:last-of-type 	{padding-bottom:30px;}
+.wrap_contact_info:last-of-type 	{padding-bottom:0;}
 .wrap_contact_info:nth-of-type(1) 	{padding-top:30px; width:900px; margin-left:-10px;}
 .wrap_contact_info .contact_info	{padding-bottom:15px; border-bottom:1px dotted #7481aa; margin-bottom:15px;}
 .wrap_contact_info .contact_info:last-of-type	{padding-bottom:20px; border:0; margin-bottom:0;}
@@ -196,33 +196,32 @@ td .currency	{font-size:10px; line-height:12px; color:#ccc;}
 .tab_currency	{width:40%; padding-left:30px; text-align:right; font-size:12px; color:#ccc;}
 
 /*	PROVIDER, RECEIVER ORG	*/
-.type			{font-size:11px; color:#CCC; margin:0 auto; border-radius:4px; padding:2px 4px 3px 4px; background-color:rgba(72,79,86,0.6); margin-left:-5px;}
-.ref			{font-size:11px; line-height:initial; color:#CCC; margin:0 auto;}
+.type			{font-size:11px; color:#CCC; margin:0 auto; border-radius:4px; padding:2px 4px; background-color:rgba(72,79,86,0.6); margin-left:-5px;}
+.ref			{font-size:10px; line-height:initial; color:#CCC; margin:0 auto; font-family:monospace;}
 .ref span		{color:#fff;}
 .ref span.withdrawn					{background-color:#545e73; font-size:10px; color:#ddd;}
-td.receiver div,
-td.receiver div,
+.org-type		{margin-top:5px;}
 td.description div 					{line-height:16px;}
 td.receiver div,
-td.provider div						{padding-bottom:2px; line-height:14px;}
+td.provider div						{padding-bottom:2px; line-height:10px;}
 td.receiver .receiver_text,
-td.provider .provider_text 			{font-size:13px; line-height:15px; padding-bottom:2px;}
+td.provider .provider_text 			{font-size:13px; line-height:15px; padding-bottom:5px;}
 td.description .description_text	{font-size:13px; line-height:15px; border:0;}
 td.description div 					{padding-bottom:5px; border-bottom:1px dotted #666;}
 td.description div:last-of-type		{border:0;}
 
 table.budget	{border-collapse:collapse; table-layout:fixed; text-align:left; width:880px;}
-table.budget th	{padding-bottom:10px; margin-bottom:15px; font-size:14px; font-weight:normal; color:#CCC; line-height:1.35em; background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPBAMAAADJ+Ih5AAAAIVBMVEUAAAD////////////////////////////////////////PIev5AAAAC3RSTlMArxdHEAqfnTkpJkV64fYAAAAtSURBVAjXY8AKOGAMQwMIzSUoCWG4C4o5gBlBSkoBcPVwEbgauC6EOQiTMQEAKKIEY4aIsg8AAAAASUVORK5CYII=) no-repeat right 5px center;}
+table.budget th	{padding-bottom:10px; margin-bottom:15px; font-size:13px; font-weight:normal; color:#CCC; line-height:1.35em; background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPBAMAAADJ+Ih5AAAAIVBMVEUAAAD////////////////////////////////////////PIev5AAAAC3RSTlMArxdHEAqfnTkpJkV64fYAAAAtSURBVAjXY8AKOGAMQwMIzSUoCWG4C4o5gBlBSkoBcPVwEbgauC6EOQiTMQEAKKIEY4aIsg8AAAAASUVORK5CYII=) no-repeat right 5px center;}
 .org table.budget th.status,
-table.budget th.value	{background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPBAMAAADJ+Ih5AAAAIVBMVEUAAAD////////////////////////////////////////PIev5AAAAC3RSTlMArxdHEAqfnTkpJkV64fYAAAAtSURBVAjXY8AKOGAMQwMIzSUoCWG4C4o5gBlBSkoBcPVwEbgauC6EOQiTMQEAKKIEY4aIsg8AAAAASUVORK5CYII=) no-repeat right -5px center, #152136;}
+table.budget th.value	{background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPBAMAAADJ+Ih5AAAAIVBMVEUAAAD////////////////////////////////////////PIev5AAAAC3RSTlMArxdHEAqfnTkpJkV64fYAAAAtSURBVAjXY8AKOGAMQwMIzSUoCWG4C4o5gBlBSkoBcPVwEbgauC6EOQiTMQEAKKIEY4aIsg8AAAAASUVORK5CYII=) no-repeat right -5px center, #1b232de8;}
 
 table.budget th:hover	{cursor:pointer;}
 table.budget td			{font-size:14px; color:#FFF; line-height:1.35em; vertical-align:top; border-bottom:1px solid #4d5264; padding:10px 0;}
-table.budget td.value	{font-size:16px; padding-right:20px; text-align:right;}
+table.budget td.value	{font-size:15px; padding-right:20px; text-align:right;}
 .org table.budget td.value			{font-size:14px;}
 
 table.budget tr:nth-of-type(1) td	{padding-top:15px;}
-table.budget th			{position:sticky; top:30px; z-index:1; background-color:#152136; padding:10px 0;}
+table.budget th			{position:sticky; top:30px; z-index:1; background-color:#1b232de8; padding:10px 0;}
 table.budget th:after	{content:''; position:absolute; left:0; bottom:-1px; width:100%; border-bottom:1px solid #aaa;}
 table.part_org td.part_org_ref div	{line-height:10px; padding-top:5px;}
 
@@ -297,15 +296,17 @@ table.budget.part_org td.part_org_name		{padding-right:40px;}
 table.budget.part_org th.part_org_ref,
 table.budget.part_org td.part_org_ref		{width:160px; padding-right:20px;}
 table.budget.part_org th.part_org_role,
-table.budget.part_org td.part_org_role,
+table.budget.part_org td.part_org_role		{width:120px; padding-right:20px;}
 table.budget.part_org th.part_org_type,
-table.budget.part_org td.part_org_type		{width:130px; padding-right:20px;}
+table.budget.part_org td.part_org_type		{width:140px;}
+table.budget.part_org td.part_org_type		{font-size:12px;}
 
 /*	IATI ACTIVITY HUMANITARIAN SCOPE TABLE	*/
 .wrap_humanitarian_scope th.hum_title,
 .wrap_humanitarian_scope td.hum_title		{padding-right:40px;}
 .wrap_humanitarian_scope th.hum_code,
-.wrap_humanitarian_scope td.hum_code		{width:160px; padding-right:20px; font-size:12px;}
+.wrap_humanitarian_scope td.hum_code		{width:160px; padding-right:20px;}
+.wrap_humanitarian_scope td.hum_code		{font-size:12px;}
 .wrap_humanitarian_scope th.hum_vocab,
 .wrap_humanitarian_scope td.hum_vocab		{width:130px; padding-right:20px;}
 .wrap_humanitarian_scope th.hum_type,
@@ -321,10 +322,12 @@ table.budget.location td.loc_des			{width:230px;}
 table.budget.location td.loc_des			{font-size:12px;}
 table.budget.location th.loc_pos,
 table.budget.location td.loc_pos			{width:100px;}
+table.budget.location td.loc_pos			{font-size:12px; font-family:monospace;}
 table.budget.location th.loc_reach,
 table.budget.location td.loc_reach,
 table.budget.location th.loc_exact,
 table.budget.location td.loc_exact			{width:110px; padding-right:0px;}
+table.budget.location td.loc_name div		{line-height:1em;}
 table.budget.location td.loc_des:first-letter	{text-transform:capitalize;}
 table.budget.location td.loc_des div		{padding-top:5px;}
 table.budget.location td.loc_des .loc_act	{color:#ccc;}
@@ -349,7 +352,7 @@ table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 .wrap_result table.budget th.result_indi,
 .wrap_result table.budget td.result_indi	{width:320px; padding-right:40px;}
 .wrap_result th.result_percent,
-.wrap_result td.result_percent				{width:100px;}
+.wrap_result td.result_percent				{width:85px;}
 .wrap_result td.result_base					{position:relative;}
 .wrap_result td.result_base,
 .wrap_result td.result_target,
@@ -362,7 +365,7 @@ table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 .wrap_result td.result_period				{width:130px;}
 .wrap_result td.result_period				{font-size:11px; line-height:20px; text-align:center;}
 .wrap_result .header_doc					{display:none;}
-.wrap_result_text							{padding:20px 0;}
+.wrap_result_text							{padding:5px 0 20px 0;}
 .result_main_title							{font-size:16px; line-height:20px;}
 .result_title								{font-size:15px; line-height:18px;}
 .result_main_title:first-letter,
@@ -383,11 +386,12 @@ table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 .result_indicator.left_indi					{width:75%; padding-right:25px;}
 .wrap_result_indicator						{margin-bottom:10px;}
 .result_indicator_title						{padding-bottom:10px; border-bottom:1px solid #aaa; margin-bottom:10px; font-size:14px; font-weight:normal; color:#CCC; line-height:1.35em; }
-.wrap_result_indi_ref						{padding-bottom:15px;}
+.wrap_result_indi_ref						{padding-bottom:15px; margin-top:-10px;}
 .wrap_result_indi_ref:last-of-type			{padding:0;}
-.result_indi_head							{font-size:11px; border-bottom:1px solid #4d5264; color:#ccc;}
+.result_indi_head							{font-size:10px; border-bottom:1px solid #4d5264; color:#ccc; padding-bottom:3px;}
 .result_indi_desc							{padding-top:5px; font-size:14px; line-height:18px; color:#ddd;}
-.result_indi_ref							{padding:5px 0 10px 0; font-size:11px; line-height:13px; border-bottom:1px dotted #666;}
+.result_indi_ref							{padding:5px 0 0 0; font-size:11px; line-height:11px; border-bottom:1px dotted #666;}
+.result_indi_ref div						{padding-bottom:3px;}
 .result_indi_ref:last-of-type				{border:0; padding-bottom:0;}
 .result_indi_ref .ref						{display:inline-block; vertical-align:top; font-size:9px; min-width:35px;}
 .result_indi_ref .type						{margin:0; font-size:9px;}
@@ -396,7 +400,7 @@ table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 .wrap_result .sector_list_wrap				{color:#ccc; padding:0 0 10px 0;}
 .wrap_result .header.glossary				{margin-bottom:10px;}
 .wrap_result table.budget td				{vertical-align:middle; padding:5px 0;}
-.wrap_result table.budget tr.row_measure td	{color:#ccc; font-size:11px; padding:5px 10px 5px 0;}
+.wrap_result table.budget tr.row_measure td	{color:#ccc; font-size:11px; padding:6px 10px 4px 0;}
 .result_facet								{font-size:11px; line-height:16px; color:#ccc;}
 .result_facet_name							{font-size:13px; color:#fff;}
 .result_facet_value							{font-weight:bold; font-size:14px; color:#fff;}
@@ -501,6 +505,8 @@ table.modals td.mod_4,
 table.modals th.mod_4			{width:160px;}
 table.modals th.mod_7,
 table.modals td.mod_7			{width:80px; padding-right:0;}
+table.modals td div				{padding-bottom:5px;}
+table.modals td span			{margin:0; font-size:10px; font-family:monospace;}
 table.modals td span.withdrawn	{display:inline-block; background-color:#545e73; font-size:10px; color:#ddd; margin-top:5px; margin-left:0;}
 
 /*	Chartist SVG	 */
