@@ -1,3 +1,11 @@
+Development Portal (2020-04-11 shi)
+==============================
+Display array for default-aid-type
+Fix layout legibility for result indicator reference
+Fix layout legibility for receiver and provider columns in tables
+Update placeholder text for total commitment search dropdown
+
+
 Development Portal (2020-04-08 shi)
 ==============================
 Add print-friendly css for new SAVi
